make-a-wish-salesforce/src/objects/cg__SQueue__c.object
<CustomObject>
    <fields>
        <fullName>cg__Error_Count__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Error Count</label>
        <precision>4</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>cg__Error_Message__c</fullName>
        <label>Error Message</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>cg__Execution_Date__c</fullName>
        <description>Date for when this process will be done. A process will be done if Execution Date is null OR it has passed. Done to make room for static reoccurring jobs.</description>
        <label>Execution Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>cg__Is_Completed__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Is Completed</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>cg__Payload__c</fullName>
        <label>Payload</label>
        <length>131072</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>cg__Process__c</fullName>
        <label>Process</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>SQueue</label>
    <listViews>
        <fullName>cg__All</fullName>
        <columns>NAME</columns>
        <columns>cg__Process__c</columns>
        <columns>cg__Is_Completed__c</columns>
        <columns>cg__Payload__c</columns>
        <columns>cg__Error_Count__c</columns>
        <columns>cg__Error_Message__c</columns>
        <columns>CREATED_DATE</columns>
        <columns>LAST_UPDATE</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>SQueue Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>SQueues</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>